--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,16 +9,28 @@
   <meta name="description" content="반응형 사이트 따라하기">
   <meta name="keywords" content="반응형사이트, 웹퍼블리셔, 웹접근성, HTML5">
   <title>반응형 사이트 만들기</title>
-  <link rel="shortcut icon" href="https://png.pngtree.com/png-vector/20190725/ourmid/pngtree-responsive-icon-for-your-project-png-image_1576010.jpg" type="image/x-icon">
+  <link rel="shortcut icon"
+    href="https://png.pngtree.com/png-vector/20190725/ourmid/pngtree-responsive-icon-for-your-project-png-image_1576010.jpg"
+    type="image/x-icon">
+
+  <!-- light gallery -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.7.1/css/lightgallery.min.css" />
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.7.1/css/lg-thumbnail.min.css" />
+
+  <!-- 폰트어썸 -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" />
+
+  <!-- 슬릭 -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
 
   <!-- style -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/reset.css">
-  ​
 </head>
+
 <body>
-  
+
   <header id="header">
     <div class="container">
       <div class="header">
@@ -31,9 +44,306 @@
           <h1>Professional Web Publish</h1><br>
           <a href="#">GreenArt.co.kr</a>
         </div><!-- //header_tit -->
+        <div class="header_icon">
+          <ul>
+            <li>
+              <a href="#">
+                <i class="fab fa-html5"></i>
+                <span>HTML5</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="fab fa-github"></i>
+                <span>Github</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="fab fa-facebook-square"></i>
+                <span>Facebook</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="fab fa-twitter"></i>
+                <span>Twitter</span>
+              </a>
+            </li>
+          </ul>
+        </div> <!-- //header_icon -->
       </div><!-- //header -->
     </div><!-- //container -->
   </header>
+  <!-- //header -->
+
+  <nav id="nav">
+    <div class="container">
+      <div class="row">
+        <div class="nav clearfix">
+          <div>
+            <h3>HTML Reference</h3>
+            <ul>
+              <li><a href="#">HTML 태그(Tag)</a></li>
+              <li><a href="#">블록 요소/인라인 요소</a></li>
+              <li><a href="#">DTD 선언</a></li>
+              <li><a href="#">언어 속성 설정</a></li>
+              <li><a href="#">HTML &lt;title&gt;</a></li>
+              <li><a href="#">HTML &lt;meta&gt;</a></li>
+              <li><a href="#">특수문자</a></li>
+              <li><a href="#">하이퍼 링크</a></li>
+              <li><a href="#">HTML &lt;style&gt;</a></li>
+              <li><a href="#">HTML &lt;html&gt;</a></li>
+              <li><a href="#">HTML &lt;head&gt;</a></li>
+              <li><a href="#">HTML &lt;div&gt;</a></li>
+              <li><a href="#">HTML &lt;colgroup&gt;</a></li>
+              <li><a href="#">HTML &lt;caption&gt;</a></li>
+            </ul>
+          </div> <!-- //HTML Reference -->
+          <div>
+            <h3>CSS Reference</h3>
+            <ul>
+              <li><a href="#">CSS 선택자</a></li>
+              <li><a href="#">CSS 단위</a></li>
+              <li><a href="#">CSS 색상</a></li>
+              <li><a href="#">CSS 선언 방법</a></li>
+              <li><a href="#">상대주소와 절대주소</a></li>
+              <li><a href="#">CSS float</a></li>
+              <li><a href="#">이미지 표현 방법</a></li>
+              <li><a href="#">이미지 스프라이드</a></li>
+              <li><a href="#">IR 효과</a></li>
+              <li><a href="#">이미지 최적화</a></li>
+              <li><a href="#">background-color</a></li>
+              <li><a href="#">border-style</a></li>
+              <li><a href="#">font-size</a></li>
+              <li><a href="#">text-align</a></li>
+            </ul>
+          </div> <!-- //CSS Reference -->
+          <div>
+            <h3>Webstandard</h3>
+            <ul>
+              <li><a href="#">웹표준</a></li>
+              <li><a href="#">웹접근성</a></li>
+              <li><a href="#">W3C</a></li>
+              <li><a href="#">웹 접근성 연구소</a></li>
+              <li><a href="#">네이버 널리</a></li>
+              <li><a href="#">다음 다룸</a></li>
+              <li><a href="#">webstandard</a></li>
+            </ul>
+          </div><!-- //Webstandard -->
+        </div> <!-- // class nav -->
+      </div><!-- // row 반응형 패딩조절 -->
+    </div> <!-- //container -->
+  </nav>
+  <!-- //nav -->
+
+  <div id="title">
+    <div class="container">
+      <div class="tit">
+        <h2>&ldquo; 나는 풀스택개발자이다! &rdquo;</h2>
+        <a href="#" class="btn">
+          <i class="fas fa-angle-double-down"></i>
+          <span class="ir">전체메뉴</span>
+        </a> <!-- //btn -->
+      </div> <!-- //tit -->
+    </div> <!-- //container -->
+  </div> <!-- //title -->
+  <!-- 메인태그는 꼭 한번만 사용 -->
+  <main>
+    <div id="contents">
+      <div class="container">
+        <h2 class="ir">반응형 사이트 컨텐츠</h2>
+        <section id="cont_left">
+          <h3 class="ir">메뉴 및 게시판 컨텐츠 영역</h3>
+          <article class="column col1">
+            <h4 class="col_tit">Menu</h4>
+            <p class="col_desc">Box-shadow를 이용한 마우스오버 효과메뉴입니다.</p>
+            <!-- 메뉴 -->
+            <div class="menu">
+              <ul>
+                <li><a href="#">Cafe<i class="fas fa-caret-right"></i></a></li>
+                <li><a href="#">Tutorial<i class="fas fa-caret-right"></i></a></li>
+                <li><a href="#">Website<i class="fas fa-caret-right"></i></a></li>
+                <li><a href="#">Reference<i class="fas fa-caret-right"></i></a></li>
+                <li><a href="#">CSS3<i class="fas fa-caret-right"></i></a></li>
+                <li><a href="#">HTML5<i class="fas fa-caret-right"></i></a></li>
+              </ul>
+            </div>
+          </article> <!-- //col1 -->
+          <article class="column col2">
+            <h4 class="col_tit">Menu</h4>
+            <p class="col_desc">Box-shadow를 이용한 마우스오버 효과메뉴입니다.</p>
+          </article> <!-- //col2 -->
+          <article class="column col3">
+            <h4 class="col_tit">Menu</h4>
+            <p class="col_desc">Box-shadow를 이용한 마우스오버 효과메뉴입니다.</p>
+          </article> <!-- //col3 -->
+        </section>
+        <section id="cont_center">
+          <article class="column col4">
+            <h4 class="col_tit">Slick</h4>
+            <p class="col_desc">slick.js를 이용한 이미지 슬라이드 효과입니다.</p>
+            <!-- 이미지 슬라이드 -->
+            <div class="slider">
+              <div>
+                <figure>
+                  <img src="img/slide1.jpg" alt="sli-1">
+                  <figcaption>
+                    <em>Responsive Site</em>
+                    <span>슬라이더 플러그인을 이용한 반응형 이미지 슬라이드 입니다.</span>
+                  </figcaption>
+                </figure>
+              </div>
+              <div>
+                <figure>
+                  <img src="img/slide2.jpg" alt="sli-2">
+                  <figcaption>
+                    <em>Responsive Site</em>
+                    <span>슬라이더 플러그인을 이용한 반응형 이미지 슬라이드 입니다.</span>
+                  </figcaption>
+                </figure>
+              </div>
+              <div>
+                <figure>
+                  <img src="img/slide3.jpg" alt="sli-3">
+                  <figcaption>
+                    <em>Responsive Site</em>
+                    <span>슬라이더 플러그인을 이용한 반응형 이미지 슬라이드 입니다.</span>
+                  </figcaption>
+                </figure>
+              </div>
+            </div>
+          </article> <!-- //col4 -->
+          <article class="column col5">
+            <h4 class="col_tit">Filter Effect</h4>
+            <p class="col_desc">light Gallery를 이용한 슬라이드 효과입니다.</p>
+            <div id="lightgallery" class="square clearfix">
+              <a href="img/light01_s.jpg">
+                <img alt="img1" src="img/light01.jpg" />
+                <em>blur</em>
+              </a>
+              <a href="img/light02_s.jpg">
+                <img alt="img2" src="img/light02.jpg" />
+                <em>brightness</em>
+              </a>
+              <a href="img/light03_s.jpg">
+                <img alt="img3" src="img/light03.jpg" />
+                <em>contrast</em>
+              </a>
+              <a href="img/light04_s.jpg">
+                <img alt="img4" src="img/light04.jpg" />
+                <em>grayscale</em>
+              </a>
+              <a href="img/light05_s.jpg">
+                <img alt="img5" src="img/light05.jpg" />
+                <em>hue-rotate</em>
+              </a>
+              <a href="img/light06_s.jpg">
+                <img alt="img6" src="img/light06.jpg" />
+                <em>invert</em>
+              </a>
+              <a href="img/light07_s.jpg">
+                <img alt="img7" src="img/light07.jpg" />
+                <em>opacity</em>
+              </a>
+              <a href="img/light08_s.jpg">
+                <img alt="img8" src="img/light08.jpg" />
+                <em>saturate</em>
+              </a>
+              <a href="img/light09_s.jpg">
+                <img alt="img9" src="img/light09.jpg" />
+                <em>sepia</em>
+              </a>
+              <a href="img/light10_s.jpg">
+                <img alt="img10" src="img/light10.jpg" />
+                <em>Mix</em>
+              </a>
+
+            </div>
+
+          </article> <!-- //col5 -->
+          <article class="column col6">
+            <h4 class="col_tit">Video</h4>
+            <p class="col_desc">영상을 보여주는 영역입니다.</p>
+            <!-- 유튜브 -->
+            <div class="video">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/pG6iaOMV46I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+          </article> <!-- //col6 -->
+        </section>
+        <section id="cont_right">
+          <article class="column col7">
+            <h4 class="col_tit">Effect1</h4>
+            <p class="col_desc">CSS3의 transform을 이용한 마우스 오버 효과입니다.</p>
+            
+            <!-- card -->
+            <div class="card">
+              <figure class="front">
+                <img src="img/side1.jpg" alt="side1">
+              </figure>
+              <div class="back">
+                <i class="fas fa-spider"></i>
+              </div>
+            </div>
+          </article> <!-- //col7 -->
+          <article class="column col8">
+            <h4 class="col_tit">Menu</h4>
+            <p class="col_desc">Box-shadow를 이용한 마우스오버 효과메뉴입니다.</p>
+          </article> <!-- //col8 -->
+          <article class="column col9">
+            <h4 class="col_tit">Menu</h4>
+            <p class="col_desc">Box-shadow를 이용한 마우스오버 효과메뉴입니다.</p>
+          </article> <!-- //col9 -->
+
+        </section>
+      </div>
+    </div>
+  </main>
+
+  <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.7.1/lightgallery.min.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.7.1/plugins/thumbnail/lg-thumbnail.min.js">
+  </script>
+
+  <script>
+    $('.tit .btn').click(function (e) {
+      e.preventDefault
+      //  $('.nav').fadeIn();
+      // $('.nav').slideDown();
+      //토글키는 버튼 누르면 열렸다가 닫혔다가 할수 있다.
+      $('.nav').slideToggle();
+      $('.tit .btn').toggleClass('open')
+      if ($('.tit .btn').hasClass('open')) {
+        // A.attr(B) ==> A요소 안에 있는 속성 B를 가져와라
+        // A.attr(B,C) ==> A요소 안에 있는 속성 B을 C로 바꿔라
+        $('.tit .btn').find('i').attr('class', "fas fa-angle-double-up")
+      } else {
+        $('.tit .btn').find('i').attr('class', "fas fa-angle-double-down")
+      }
+    })
+
+
+    // 이미지슬라이드
+
+    $('.slider').slick({
+      infinite: true,
+      slidesToShow: 1,
+      dots: true,
+      arrows: true,
+      autoplay: true
+    });
+
+    //light gallery
+
+    lightGallery(document.getElementById('lightgallery'), {
+      plugins: [lgThumbnail],
+    });
+  </script>
 
 </body>
+
 </html>
