--- a/index.html
+++ b/index.html
@@ -171,8 +171,20 @@
             </div>
           </article> <!-- //col1 -->
           <article class="column col2">
-            <h4 class="col_tit">Menu</h4>
-            <p class="col_desc">Box-shadow를 이용한 마우스오버 효과메뉴입니다.</p>
+            <h4 class="col_tit">Notice</h4>
+            <p class="col_desc">한줄 또는 2줄이상 말줄임말 효과입니다.</p>
+            <!-- 게시판1 -->
+            <div class="notice1">
+              <h5>Notice1</h5>
+              <ul>
+                <li><a href="#">이줄은 한줄 효과입니다.이줄은 한줄 효과입니다.이줄은 한줄 효과입니다.</a></li>
+                <li><a href="#">이줄은 한줄 효과입니다.이줄은 한줄 효과입니다.이줄은 한줄 효과입니다.</a></li>
+                <li><a href="#">이줄은 한줄 효과입니다.이줄은 한줄 효과입니다.이줄은 한줄 효과입니다.</a></li>
+                <li><a href="#">이줄은 한줄 효과입니다.이줄은 한줄 효과입니다.이줄은 한줄 효과입니다.</a></li>
+              </ul>
+              <a href="#" class="more" title="더보기">More <i class="fas fa-plus-circle"></i></a>
+            </div>
+            <!-- //게시판1 -->
           </article> <!-- //col2 -->
           <article class="column col3">
             <h4 class="col_tit">Menu</h4>
@@ -267,7 +279,10 @@
             <p class="col_desc">영상을 보여주는 영역입니다.</p>
             <!-- 유튜브 -->
             <div class="video">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/pG6iaOMV46I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/pG6iaOMV46I"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
             </div>
           </article> <!-- //col6 -->
         </section>
@@ -275,7 +290,7 @@
           <article class="column col7">
             <h4 class="col_tit">Effect1</h4>
             <p class="col_desc">CSS3의 transform을 이용한 마우스 오버 효과입니다.</p>
-            
+
             <!-- card -->
             <div class="card">
               <figure class="front">
@@ -286,13 +301,40 @@
               </div>
             </div>
           </article> <!-- //col7 -->
+
           <article class="column col8">
-            <h4 class="col_tit">Menu</h4>
-            <p class="col_desc">Box-shadow를 이용한 마우스오버 효과메뉴입니다.</p>
+            <h4 class="col_tit">Effect2</h4>
+            <p class="col_desc">CSS3의 transform을 이용한 마우스오버 효과입니다.</p>
+            <!-- card2 -->
+            <div class="card2">
+              <figure class="front">
+                <img src="img/side2.jpg" alt="side2">
+                <figcaption>
+                  <h3>Hover Effect</h3>
+                </figcaption>
+              </figure>
+              <figure class="back">
+                <img src="img/side4.jpg" alt="side4">
+                <figcaption>
+                  <h3>Hover Effect2</h3>
+                </figcaption>
+              </figure>
+            </div>
+            <!-- //card2 -->
           </article> <!-- //col8 -->
           <article class="column col9">
-            <h4 class="col_tit">Menu</h4>
-            <p class="col_desc">Box-shadow를 이용한 마우스오버 효과메뉴입니다.</p>
+            <h4 class="col_tit">Effect3</h4>
+            <p class="col_desc">CSS3의 transform을 이용한 마우스오버 효과입니다.</p>
+            <!-- card3 -->
+            <div class="card3">
+              <figure>
+                <img src="img/side3.jpg" alt="side3">
+                <figcaption>
+                  <h3>Hover <em>Effect</em></h3>
+                </figcaption>
+              </figure>
+            </div>
+            <!-- //card3 -->
           </article> <!-- //col9 -->
 
         </section>
